# tprg

./: .gitignore  README.md
.github/workflows/: builder.yml
generators/: Cargo.toml
generators/src/: additive.rs  clp.rs  linear.rs  main.rs  prgenerator.rs
lab/: generate.sh  labwork.ipynb  pyproject.toml
prng/: Cargo.toml
prng/src/: additive.rs  bbs.rs  clp.rs  fp.rs  lfsr.rs  linear.rs  main.rs  mersenne.rs  nfsr.rs  prgenerator.rs  rc4.rs  rsa.rs
report_labwork/: labwork.py  maker.sh  preamble.sty  report_labwork.tex  titlepage.tex
report_practice/: SCWorks.cls  report_practice.tex
rnc/: Cargo.toml
rnc/src/: binomial.rs  clp.rs  exponential.rs  gamma.rs  logistic.rs  lognormal.rs  main.rs  normal.rs  prdistribution.rs  standard.rs  triangle.rs
