[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Andrew Guschin <guschin.drew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.11, < 3.12"
notebook = "^6.5.4"
seaborn = "^0.12.2"
pandas = "^2.0.2"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
